phalcom-ast/tests/snapshots/integration__lexer__class_with_static_method.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"class Point {\\n  static origin { self }\\n}\")"
---
[
    Class,
    Identifier(
        "Point",
    ),
    LBrace,
    Static,
    Identifier(
        "origin",
    ),
    LBrace,
    SelfKw,
    RBrace,
    Newline,
    RBrace,
    Eof,
]
