phalcom-ast/tests/snapshots/integration__lexer__comparison_operators.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"a == b != c <= d >= e < f > g\")"
---
[
    Identifier(
        "a",
    ),
    EqualEqual,
    Identifier(
        "b",
    ),
    BangEqual,
    Identifier(
        "c",
    ),
    LessEqual,
    Identifier(
        "d",
    ),
    GreaterEqual,
    Identifier(
        "e",
    ),
    Less,
    Identifier(
        "f",
    ),
    Greater,
    Identifier(
        "g",
    ),
    Eof,
]
