phalcom-ast/tests/snapshots/integration__lexer__keywords_and_operators.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"if a and b or not c { self } else { super }\")"
---
[
    If,
    Identifier(
        "a",
    ),
    And,
    Identifier(
        "b",
    ),
    Or,
    Not,
    Identifier(
        "c",
    ),
    LBrace,
    SelfKw,
    RBrace,
    Else,
    LBrace,
    Super,
    RBrace,
    Eof,
]
