phalcom-ast/tests/snapshots/integration__lexer__line_comment_is_skipped.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"let x = 1 // trailing comment\\nlet y = 2\")"
---
[
    Let,
    Identifier(
        "x",
    ),
    Equal,
    Int {
        digits: "1",
        radix: 10,
    },
    Newline,
    Let,
    Identifier(
        "y",
    ),
    Equal,
    Int {
        digits: "2",
        radix: 10,
    },
    Eof,
]
