phalcom-ast/tests/snapshots/integration__lexer__modulo_operator.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"10 % 3 total %= 2\")"
---
[
    Int {
        digits: "10",
        radix: 10,
    },
    Percent,
    Int {
        digits: "3",
        radix: 10,
    },
    Identifier(
        "total",
    ),
    PercentEqual,
    Int {
        digits: "2",
        radix: 10,
    },
    Eof,
]
