phalcom-ast/tests/snapshots/integration__lexer__newline_after_operator_is_suppressed.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"a +\\nb\")"
---
[
    Identifier(
        "a",
    ),
    Plus,
    Identifier(
        "b",
    ),
    Eof,
]
