phalcom-ast/tests/snapshots/integration__lexer__numeric_digit_separators.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"1_000_000 1_000.500_5\")"
---
[
    Int {
        digits: "1000000",
        radix: 10,
    },
    Float(
        1000.5005,
    ),
    Eof,
]
