phalcom-ast/tests/snapshots/integration__lexer__punctuation_and_ranges.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"a.b :: c .. d ... e -> f => g\")"
---
[
    Identifier(
        "a",
    ),
    Dot,
    Identifier(
        "b",
    ),
    ColonColon,
    Identifier(
        "c",
    ),
    DotDot,
    Identifier(
        "d",
    ),
    DotDotDot,
    Identifier(
        "e",
    ),
    Arrow,
    Identifier(
        "f",
    ),
    Equal,
    Greater,
    Identifier(
        "g",
    ),
    Eof,
]
