phalcom-ast/tests/snapshots/integration__lexer__selector_spec_components.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"#name #name() #name(_) #name(foo) #name... #name(...) #name(_, ..., foo) #name=... #+ #== #{ key: value } #\\\"quoted\\\"\")"
---
[
    Hash,
    Identifier(
        "name",
    ),
    Hash,
    Identifier(
        "name",
    ),
    LParen,
    RParen,
    Hash,
    Identifier(
        "name",
    ),
    LParen,
    Underscore,
    RParen,
    Hash,
    Identifier(
        "name",
    ),
    LParen,
    Identifier(
        "foo",
    ),
    RParen,
    Hash,
    Identifier(
        "name",
    ),
    DotDotDot,
    Hash,
    Identifier(
        "name",
    ),
    LParen,
    DotDotDot,
    RParen,
    Hash,
    Identifier(
        "name",
    ),
    LParen,
    Underscore,
    Comma,
    DotDotDot,
    Comma,
    Identifier(
        "foo",
    ),
    RParen,
    Hash,
    Identifier(
        "name",
    ),
    Equal,
    DotDotDot,
    Hash,
    Plus,
    Hash,
    EqualEqual,
    RecordLBrace,
    Identifier(
        "key",
    ),
    Colon,
    Identifier(
        "value",
    ),
    RBrace,
    QuotedSymbol(
        "quoted",
    ),
    Eof,
]
