phalcom-ast/tests/snapshots/integration__lexer__string_interpolation_splits_into_segments.snap
---
source: phalcom-ast/tests/lexer.rs
assertion_line: 77
expression: "tokens(\"\\\"hi \\\\(name), you are \\\\(age)\\\"\")"
---
[
    StringInterp(
        [
            Literal(
                "hi ",
            ),
            Expr {
                source: "name",
                range: 6..10,
            },
            Literal(
                ", you are ",
            ),
            Expr {
                source: "age",
                range: 23..26,
            },
        ],
    ),
    Eof,
]
