phalcom-ast/tests/snapshots/integration__lexer__string_without_interpolation_stays_plain.snap
---
source: phalcom-ast/tests/lexer.rs
expression: "tokens(\"\\\"plain \\\\\\\\(not interp)\\\"\")"
---
[
    String(
        "plain \\(not interp)",
    ),
    Eof,
]
